tests/ui/resolve/enums-are-namespaced-xc.stderr
error[E0425]: cannot find value `A` in crate `namespaced_enums`
  --> $DIR/enums-are-namespaced-xc.rs:5:31
   |
LL |     let _ = namespaced_enums::A;
   |                               ^ not found in `namespaced_enums`
   |
help: consider importing this unit variant
   |
LL + use namespaced_enums::Foo::A;
   |
help: if you import `A`, refer to it directly
   |
LL -     let _ = namespaced_enums::A;
LL +     let _ = A;
   |

error[E0425]: cannot find function, tuple struct or tuple variant `B` in crate `namespaced_enums`
  --> $DIR/enums-are-namespaced-xc.rs:7:31
   |
LL |     let _ = namespaced_enums::B(10);
   |                               ^ not found in `namespaced_enums`
   |
help: consider importing this tuple variant
   |
LL + use namespaced_enums::Foo::B;
   |
help: if you import `B`, refer to it directly
   |
LL -     let _ = namespaced_enums::B(10);
LL +     let _ = B(10);
   |

error[E0422]: cannot find struct, variant or union type `C` in crate `namespaced_enums`
  --> $DIR/enums-are-namespaced-xc.rs:9:31
   |
LL |     let _ = namespaced_enums::C { a: 10 };
   |                               ^ not found in `namespaced_enums`
   |
help: consider importing this variant
   |
LL + use namespaced_enums::Foo::C;
   |
help: if you import `C`, refer to it directly
   |
LL -     let _ = namespaced_enums::C { a: 10 };
LL +     let _ = C { a: 10 };
   |

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0422, E0425.
For more information about an error, try `rustc --explain E0422`.
